--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
         <title>Abderezak KAFI</title>
     </head>
     <body>
-        <h1>Portfolio is coming soon</h1>
+        <h1>Portfolio is coming soon ...</h1>
     </body>
 </html>
