--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     </head>
     <body>
-        <h1>Portfolio is coming soon ...</h1>
+        <h1 class="m-auto">Portfolio is coming soon ...</h1>
 
-        <button type="button" class="btn btn-primary">okey</button>
+        
 
 
 
