--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css?family=Merriweather:400,700,900|Work+Sans:400,600" rel="stylesheet"> 
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/progressive-image.min.css">
+        <link rel="stylesheet" href="/css/style.css">
         <title>Abderezak KAFI</title>
     </head>
     <body>
@@ -36,7 +37,11 @@
         <div class="container">         
            <div class="row main ">
                 <div class="col-sm-0 col-lg-1"></div>
-                <div class="col-sm-12 col-lg-4 order-lg-3 text-center"><img src="/Media/profil_pic.png" class="img-fluid" alt="profile picture"></div>
+                <div class="col-sm-12 col-lg-4 order-lg-3 text-center">
+                    <a href="/Media/profil_pic.png" class="progressive replace">
+                        <img src="/Media/sm/profil_pic.jpg" class="preview" alt="profil picture"/>
+                    </a>
+                </div>
                 <div class="col-sm-12 col-lg-6 order-lg-2 ">
                     <div class="d-flex flex-column">
                         <h1 class="mb-auto display-1 text-sm-center text-lg-left">
@@ -66,8 +71,11 @@
            </div>
            <div class="row">
                 <div class="col-sm-0 col-md-5"></div>
-                <div class="col-sm-12 col-md-2 text-center"><img src="/Media/Quizzito_Family_logo.svg"   alt="Quizzito Family logo"></div>
-                <div class="col-sm- col-md-5"></div>
+                <div class="col-sm-12 col-md-2 text-center">
+                    <a href="/Media/Quizzito_Family_logo.svg" class="progressive replace">
+                        <img src="/Media/sm/Quizzito_Family_logo.jpg" class="preview" alt="Quizzito Family logo"/>
+                    </a>
+                    <div class="col-sm- col-md-5"></div>
            </div>
            <!-----------------Content-------------->
            <div class="row">
@@ -118,7 +126,9 @@
                         </p>
                     </div>
                     <div class="col-sm-0 col-md-2 text-center">
-                        <img src="/Media/competitors.svg" alt="Competitors picture">
+                        <a href="/Media/competitors.svg" class="progressive replace">
+                            <img src="/Media/sm/competitors.jpg" class="preview" alt="Competitors picture   "/>
+                        </a>
                     </div>
                 </div>
                 <h2><br>Audience</h2> 
@@ -142,13 +152,17 @@
                 <p>
                     Here is one of the personas I created for our parent user group
                 </p>
-                <img class="text-center" src="/Media/Personas.svg" width=100% alt="Persona khaled">
+                <a href="/Media/Personas.svg" class="progressive replace">
+                    <img src="/Media/sm/Personas.jpg" class="preview" alt="Scenario for khaled"/>
+                </a>
                 <h3><br>User Scenarios</h3>
                 <p>
                         Once I finished the personas, I started writing scenarios to clarify 
                         how they will be using our <span class="content-semi-bold">future</span> design.
                 </p>
-                <img src="/Media/Scenario.svg" width=100% alt="Scenario 1 for khaled">
+                <a href="/Media/Scenario.svg" class="progressive replace">
+                    <img src="/Media/sm/Scenario.jpg" class="preview" alt="Scenario for khaled"/>
+                </a>
                 <h2><br>User research</h2> 
                 <p>
                         For me, doing this phase right is the first step for a successful project. So, first of all, I organized a meeting with stakeholders to determine the research questions. For each one, I chose a research method to answer it. Once I finished, I defined recruitment criteria and started recruiting participants. A part of them were already our users, but I had to go to specific events to find others. Finally, I was able to start the research after getting their informed consent. Then I started analysis. 
@@ -174,12 +188,16 @@
                 <p>
                         I started grouping the collected information to summarize/share what I learned in the interviews and validate the hypothesis 
                 </p>
-                <img src="/Media/affinity diagram.svg" width=100% alt="Affinity diagram">
+                <a href="/Media/affinity diagram.svg" class="progressive replace">
+                    <img src="/Media/sm/affinity diagram.jpg" class="preview" alt="Affinity diagram"/>
+                </a>
                 <h2><br>Empathy maps</h2>
                 <p>
                         Next, I did some empathy maps. You find below one about our persona Khaled who wants his kids to start reading books, so they get used to it.
                 </p>
-                <img src="/Media/empathy_map.svg" width=100% alt="Empathy map">
+                <a href="/Media/empathy_map.png" class="progressive replace">
+                    <img src="/Media/sm/empathy_map.jpg" class="preview" alt="Empathy map"/>
+                </a>
                 <h2><br>Journey maps </h2>
                 <p>
                         Now we have empathy for the users It is necessary to search what are their pain points with the existing app so I created few empathy maps with different lenses:
@@ -224,8 +242,10 @@
            </div> 
            <div class="row">
                <div class="col-sm-12">
-                   <img src="/Media/user_flow_onboarding.svg" width=100% alt="user flow">
-               </div>
+                   <a href="/Media/user_flow_onboarding.svg" class="progressive replace">
+                    <img src="/Media/sm/user_flow_onboarding.jpg" class="preview" alt="user flow"/>
+                    </a>
+                </div>
            </div>
            <div class="row">
                 <div class="col-sm-0 col-lg-2"></div>
@@ -239,7 +259,9 @@
            </div>
            <div class="row">
                 <div class="col-sm-12">
-                    <img src="/Media/ia.svg" width=100% alt="information architecture">
+                    <a href="/Media/ia.svg" class="progressive replace">
+                        <img src="/Media/sm/ia.jpg" class="preview" alt="Information architecture"/>
+                    </a>
                 </div>
             </div>
             <div class="row">
@@ -255,14 +277,18 @@
                </div>
                <div class="row">
                     <div class="col-sm-12">
-                        <img src="/Media/Wireframes_preview.svg" width=100% alt="Wireframes preview">
+                        <a href="/Media/Wireframes_preview.svg" class="progressive replace">
+                            <img src="/Media/sm/Wireframes_preview.jpg" class="preview" alt="Wireframes preview"/>
+                        </a>
                     </div>
                 </div>
                 <br><br><br><br>
                 <div class="row">
                         <div class="col-sm-0 col-lg-2"></div>
                         <div class="col-sm-12 col-lg-8">
-                            <img src="/Media/selected_wireframes.svg" width=100% alt="Selected wireframes">
+                            <a href="/Media/selected_wireframes.svg" class="progressive replace">
+                                <img src="/Media/sm/selected_wireframes.jpg" class="preview" alt="Selected wireframes"/>
+                            </a>
                             <p>
                                     <br> After doing many sessions revising those prototypes I was ready to move to the last step 
                             </p>
@@ -276,12 +302,28 @@
                    </div>
                    <div class="row">
                         <div class="col-sm-12">
-                            <img src="/Media/Day1_p.gif" width=100% alt="Quizzito family screens">
-                            <img src="/Media/day2_p.gif" width=100% alt="Quizzito family screens">
-                            <img src="/Media/day3_p.png" width=100% alt="Quizzito family screens">
-                            <img src="/Media/day4_p.png" width=100% alt="Quizzito family screens">
-                            <img src="/Media/day5_p.gif" width=100% alt="Quizzito family screens">
-                            <img src="/Media/day6_p.gif" width=100% alt="Quizzito family screens">
+                            <a href="/Media/day1_p.gif" class="progressive replace">
+                            <img src="/Media/sm/Day1_p.jpg" class="preview" alt="Quizzito family screens"/>
+                            </a>
+                            <a href="/Media/day4_p.png" class="progressive replace">
+                                <img src="/Media/sm/Day4_p.jpg" class="preview" alt="Quizzito family screens"/>
+                            </a>
+                            <a href="/Media/day5_p.gif" class="progressive replace">
+                                <img src="/Media/sm/Day5_p.jpg" class="preview" alt="Quizzito family screens"/>
+                            </a>
+                            <a href="/Media/day6_p.gif" class="progressive replace">
+                                <img src="/Media/sm/Day6_p.jpg" class="preview" alt="Quizzito family screens"/>
+                            </a>
+                            <a href="/Media/day2_p.gif" class="progressive replace">
+                                <img src="/Media/sm/Day2_p.jpg" class="preview" alt="Quizzito family screens"/>
+                            </a>
+                            <a href="/Media/day3_p.png" class="progressive replace">
+                                <img src="/Media/sm/Day1_p.jpg" class="preview" alt="Quizzito family screens"/>
+                            </a>
+                            <p>
+                                
+                                    I’m eager to receive any feedback besides your heatmap ^^.
+                            </p>
 
 
 
@@ -306,5 +348,6 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+        <script src="js/progressive-image.min.js"></script>
     </body>
 </html>
