fixed logo and competitors

--- a/index.html
+++ b/index.html
@@ -70,17 +70,18 @@
                 <div class="col-sm-0 col-lg-4"></div>
            </div>
            <div class="row">
-                <div class="col-sm-0 col-md-5"></div>
-                <div class="col-sm-12 col-md-2 text-center">
-                    <a href="/Media/Quizzito_Family_logo.svg" class="progressive replace">
-                        <img src="/Media/sm/Quizzito_Family_logo.jpg" class="preview" alt="Quizzito Family logo"/>
+                <div class="col-4"></div>
+                <div class="col-4 text-center">
+                    <a href="/Media/Quizzito_Family_logo.svg" width=100% class="progressive replace">
+                        <img src="/Media/sm/Quizzito_Family_logo.jpg"  class="preview" alt="Quizzito Family logo"/>
                     </a>
-                    <div class="col-sm- col-md-5"></div>
+                </div>
+                    <div class="col-4"></div>
            </div>
            <!-----------------Content-------------->
            <div class="row">
-                <div class="col-sm-0 col-lg-2"></div>
-                <div class="col-sm-12 col-lg-8">
+                <div class="col-sm-1 col-lg-2"></div>
+                <div class="col-sm-11 col-lg-8">
                 <h1><br>Brief</h1>    
                 <p>
                         Quizzito family was designed for Eurl Kitabquiz an Algerian enterprise 
@@ -119,13 +120,13 @@
                         Second, I moved to the kids’ side. I found that it was not matching the business objectives. A bad quality pictures, no vivid colors, no micro interactions... The first question that came to me is: how they expect the kids to enjoy this experience.
                 </p>
                 <h2><br>Competitive analysis</h2> 
-                <div class="row">
-                    <div class="col-sm-12 col-md-10">
+                <div class="row justify-content-center">
+                    <div class="col-12 col-md-10">
                         <p>
                                 It’s important to look into the other players on the market. Thus, I started with the local market then went global. I did not find direct competitors, however, some products like Epic, Wanderful, and Hoopla aim the same audience. Therefore, I analyzed each of them to see which content and functionalities they offer. 
                         </p>
                     </div>
-                    <div class="col-sm-0 col-md-2 text-center">
+                    <div class="col-4 col-md-2 text-center">
                         <a href="/Media/competitors.svg" class="progressive replace">
                             <img src="/Media/sm/competitors.jpg" class="preview" alt="Competitors picture   "/>
                         </a>
@@ -238,7 +239,7 @@
                         Once the functional specs got approved, I started making the user flows. I choose to keep them simple so we can go faster and do as much iterations as we need. Here an example for the parent onboarding (click for full view):
                 </p>
                 </div>
-                <div class="col-sm-0 col-lg-2"></div>
+                <div class="col-sm-1 col-lg-2"></div>
            </div> 
            <div class="row">
                <div class="col-sm-12">
@@ -248,14 +249,14 @@
                 </div>
            </div>
            <div class="row">
-                <div class="col-sm-0 col-lg-2"></div>
-                <div class="col-sm-12 col-lg-8">
+                <div class="col-sm-1 col-lg-2"></div>
+                <div class="col-sm-11 col-lg-8">
                     <h2><br>Information architecture</h2>
                     <p>
                             Before to start prototyping, I like to be sure that I satisfy our users from both sides: functionalities and content. Thus, elaborating a good information architecture is a must.
                     </p>
                 </div>
-                <div class="col-sm-0 col-lg-2"></div>
+                <div class="col-sm-1 col-lg-2"></div>
            </div>
            <div class="row">
                 <div class="col-sm-12">
@@ -265,27 +266,27 @@
                 </div>
             </div>
             <div class="row">
-                    <div class="col-sm-0 col-lg-2"></div>
-                    <div class="col-sm-12 col-lg-8">
+                    <div class="col-sm-1 col-lg-2"></div>
+                    <div class="col-sm-11 col-lg-8">
                         <h2><br>Wireframes</h2>
                         <p>
                                 After getting a solid base from research, I was able to start prototyping having my users in mind so here are some chosen screens.
                                 <br>
                         </p>
                     </div>
-                    <div class="col-sm-0 col-lg-2"></div>
+                    <div class="col-sm-1 col-lg-2"></div>
                </div>
                <div class="row">
                     <div class="col-sm-12">
-                        <a href="/Media/Wireframes_preview.svg" class="progressive replace">
+                        <a href="/Media/Wireframes_preview.png" class="progressive replace">
                             <img src="/Media/sm/Wireframes_preview.jpg" class="preview" alt="Wireframes preview"/>
                         </a>
                     </div>
                 </div>
                 <br><br><br><br>
                 <div class="row">
-                        <div class="col-sm-0 col-lg-2"></div>
-                        <div class="col-sm-12 col-lg-8">
+                        <div class="col-sm-1 col-lg-2"></div>
+                        <div class="col-sm-11 col-lg-8">
                             <a href="/Media/selected_wireframes.svg" class="progressive replace">
                                 <img src="/Media/sm/selected_wireframes.jpg" class="preview" alt="Selected wireframes"/>
                             </a>
@@ -298,7 +299,7 @@
                             <br>
                             </p>
                         </div>
-                        <div class="col-sm-0 col-lg-2"></div>
+                        <div class="col-sm-1 col-lg-2"></div>
                    </div>
                    <div class="row">
                         <div class="col-sm-12">
@@ -320,7 +321,7 @@
                             <a href="/Media/day3_p.png" class="progressive replace">
                                 <img src="/Media/sm/Day1_p.jpg" class="preview" alt="Quizzito family screens"/>
                             </a>
-                            <p>
+                            <p class="text-center">
                                 
                                     I’m eager to receive any feedback besides your heatmap ^^.
                             </p>
@@ -348,6 +349,6 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-        <script src="js/progressive-image.min.js"></script>
+        <script src="js/progressive-image.js"></script>
     </body>
 </html>
