--- a/index.html
+++ b/index.html
@@ -2,17 +2,16 @@
 
 <html lang="en">
     <head>
-        <!-- Hotjar Tracking Code for abderezak.pro -->
-        <script>
-        (function(h,o,t,j,a,r){
-            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-            h._hjSettings={hjid:1259630,hjsv:6};
-            a=o.getElementsByTagName('head')[0];
-            r=o.createElement('script');r.async=1;
-            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-            a.appendChild(r);
-        })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-       </script>
+       <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-137271672-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-137271672-1');
+</script>
+
     <!------------------------------------------->
           <!-- Required meta tags -->
         <meta charset="utf-8">
@@ -318,7 +317,7 @@
                    </div>
                    <div class="row">
                         <div class="col-sm-12">
-                            <a href="/Media/day1_p.gif" class="progressive replace">
+                            <a href="/Media/Day1_p.gif" class="progressive replace">
                             <img src="/Media/sm/Day1_p.jpg" class="preview" alt="Quizzito family screens"/>
                             </a>
                             <a href="/Media/day4_p.png" class="progressive replace">
