--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 
                 <div class="col-sm-12 col-lg-6 order-lg-2 ">
                     <div class="d-flex flex-column">
-                        <h1 class="display-1 text-sm-center text-lg-left">
+                        <h1 class="mb-auto display-1 text-sm-center text-lg-left">
                             Abderezak — UX/UI designer<br>
                             with a Master degree <br>
                             in computer science.<br>
