--- a/index.html
+++ b/index.html
@@ -388,11 +388,17 @@
                                 Second, I worked under multiple constraints the major one was the limited skills of the front-end developer.  Hopefully, I'm from a computer science background, I coded before and I know what does it mean to develop certain functionalities. Thus, I was taking into consideration the team skills and the time constraint also. 
                               <br>
                                 Third, it's all about iterations. Every time I was doing a usability test, conducting an interview or just observing the user behavior I was learning new thing especially from the kids. So I'm able to say that a designer mission will never finish, we can always make things better. 
+                                <br>
+                                Now you took a look at my work process you can know more 
+                                <a href="./about.html" class="link"> about me</a>  
                             </p>
                             <p class="text-center content-semi-bold">
                                 
                                 I’m eager to receive any feedback besides your heatmap ^^.
                                 <br><br><br><br><br><br>  <br><br>
+                                <p class="text-center">
+                                        Copyright © 2019 Abderezak KAFI
+                                </p>
                             </p>
                         </div>
                         <div class="col-sm-1 col-lg-2"></div>
