work and about files added

--- a/index.html
+++ b/index.html
@@ -36,27 +36,27 @@
     </head>
     <body >
         
-        <!----------Nav Bar----------->
-            <nav class="navbar  fixed-top navbar-expand-lg navbar-light my-nav ">
-                    <a class="navbar-brand" href="#">Abderezak <span>KAFI</span></a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                      <span class="navbar-toggler-icon"></span>
-                    </button>  
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                      <ul class="navbar-nav ml-auto">
-                        <li class="nav-item active">
-                          <a class="nav-link" href="#">Process<span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="#">Work</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="#">About</a>
-                        </li>
-                      </ul>
-                    </div>
-                  </nav>
-        <!-------------nav bar---------------->
+       <!----------Nav Bar----------->
+    <nav class="navbar  fixed-top navbar-expand-lg navbar-light my-nav ">
+        <a class="navbar-brand" href="#">Abderezak <span>KAFI</span></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>  
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+            <a class="nav-link" href="/index.html">Process<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link" href="/work.html">Work</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link" href="/about.html">About</a>
+            </li>
+        </ul>
+        </div>
+    </nav>
+<!-------------nav bar---------------->
         <div class="container">         
            <div class="row main ">
                 <div class="col-sm-0 col-lg-1"></div>
