code added to about

--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
             <a class="nav-link" href="/index.html">Process<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="/work.html">Work</a>
+            <a class="nav-link" href="work.html">Work</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="/about.html">About</a>
+            <a class="nav-link" href="about.html">About</a>
             </li>
         </ul>
         </div>
