cv added, lazy loading carousel added

--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
                                 <img src="/Media/sm/Day2_p.jpg" class="preview" alt="Quizzito family screens"/>
                             </a>
                             <a href="/Media/day3_p.png" class="progressive replace">
-                                <img src="/Media/sm/Day1_p.jpg" class="preview" alt="Quizzito family screens"/>
+                                <img src="/Media/sm/day3_p.jpg" class="preview" alt="Quizzito family screens"/>
                             </a>
                            
 
