--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <p>
                                 continue scrolling to see<br>
                                 my work process else you can visit my
-                                <a href="#" >WORK</a>
+                                <a href="work.html" >WORK</a>
                         </p>
                     </div>
                 </div>
