--- a/work.html
+++ b/work.html
@@ -69,7 +69,7 @@
         <div class="col-2"></div>
 
         <div class="col-8">
-            <h2>
+            <h2 class="text-center">
               <br><br><br><br><br><br>
                 While I'm crafting some beautiful presentations,
                 You can check my
