--- a/about.html
+++ b/about.html
@@ -111,9 +111,7 @@
               </ol>
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <a href="./Media/abdou_night.jpg" class="progressive replace">
-                    <img src="/Media/sm/night_benchnat_min_sm.jpg" class="preview d-block w-100" alt="First slide"/>
-                    </a>
+                    <img class="d-block w-100" src="/Media/abdou_night.jpg" alt="First slide">
                 </div>
                 <div class="carousel-item">
                   <img class="d-block w-100" src="/Media/abdou_lol.jpg" alt="Second slide">
