--- a/about.html
+++ b/about.html
@@ -111,10 +111,10 @@
               </ol>
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="d-block w-100" data-src="/Media/abdou_night.jpg" class="lazyload" alt="First slide">
+                    <img class="d-block w-100" src="/Media/abdou_night.jpg" alt="First slide">
                 </div>
                 <div class="carousel-item">
-                  <img class="d-block w-100" data-src="/Media/abdou_lol.jpg" class="lazyload" alt="Second slide">
+                  <img class="d-block w-100" src="/Media/abdou_lol.jpg" alt="Second slide">
                 </div>
                 <div class="carousel-item">
                   <img class="d-block w-100" src="/Media/abdou_beach.jpg" alt="Third slide">
