--- a/projects/fastwork/fastwork.html
+++ b/projects/fastwork/fastwork.html
@@ -58,7 +58,12 @@
     </nav>
 <!-------------nav bar---------------->
         <div class="container"> 
-
+<!---------------Email me and scroll top--------------->
+<button id="scrollToTopButton" class="btn my-button" onclick="window.scrollTo(0 ,0);">
+        <img src="/Media/goToTop.svg" alt="go to top">
+        </button>
+        <button id="fab" class="btn my-button" onclick="myFunction()">Email me</button>
+    <!---------------Email me and scroll top--------------->
 
 <div class="row justify-content-center">
         <div class="col-8 col-md-4">
