--- a/projects/zedlashes/zedlashes.html
+++ b/projects/zedlashes/zedlashes.html
@@ -34,7 +34,7 @@
         <link rel="stylesheet" href="/css/style.css">
         <title>Abderezak KAFI</title>
     </head>
-    <body class="fastwork" >
+    <body class="zedlashes" >
         
        <!----------Nav Bar----------->
     <nav class="navbar  fixed-top navbar-expand-lg navbar-light my-nav ">
