--- a/projects/qods/HabiQods.html
+++ b/projects/qods/HabiQods.html
@@ -342,7 +342,54 @@ protection zone is an invisible rectangle devoid of content.
     </div>
 </div>
 
+<div class="row justify-content-center">
+  <div class="col-4">
+      <div class="card shadow-sm h-100">
+              <a href="/projects/leaderbio/leaderbio.html">
+          <img class="card-img-top" src="/Media/thumbnails/leaderbio_t.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">LeaderBio - 
+                Visual identity design  </h5>
+          </div>
+          </a>
+        </div>
+        
+  </div>
+    <div class="col-4">
+        <div class="card shadow-sm h-100 ">
+            <a href="/projects/zedlashes/zedlashes.html">
+            <img class="card-img-top" src="/Media/thumbnails/zedlashes.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Zedlashes -
+                  website design</h5>
+            </div>
+        </a>
+          </div>
+    </div>
+    <div class="col-4">
+        <div class="card shadow-sm h-100 ">
+                <a href="/projects/fastwork/fastwork.html">
+            <img class="card-img-top" src="/Media/thumbnails/fastwork.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Fastwork - 
+                Handyman service app</h5>
+            </div>
+            </a>
+          </div>
+    </div>  
 
+
+</div>
+<div class="row justify-content-center">
+<div class="col-12">
+
+    <h1><br><br><br><br><br><br><br></h1>
+    <p class="text-center">
+            Copyright © 2019 Abderezak KAFI
+    </p>
+</div>
+</div>
+        
 
 
 </div>
