--- a/projects/zedlashes/zedlashes.html
+++ b/projects/zedlashes/zedlashes.html
@@ -105,8 +105,8 @@
 
 </div>
 </div>
-<div class="row justify-content-center">
-        <div class="col-4">
+<div class="row ">
+        <div class="col-12 col-md-6 col-lg-4 mt-4">
             <div class="card shadow-sm h-100">
                 <a href="/projects/qods/HabiQods.html">
                 <img class="card-img-top" src="/Media/thumbnails/habiqods.jpg" alt="Card image cap">
@@ -117,7 +117,7 @@
             </a>
               </div>
         </div>
-        <div class="col-4">
+        <div class="col-12 col-md-6 col-lg-4 mt-4">
             <div class="card shadow-sm h-100 ">
                     <a href="/projects/fastwork/fastwork.html">
                 <img class="card-img-top" src="/Media/thumbnails/fastwork.jpg" alt="Card image cap">
@@ -128,7 +128,7 @@
                 </a>
               </div>
         </div>  
-        <div class="col-4">
+        <div class="col-12 col-md-6 col-lg-4 mt-4">
             <div class="card shadow-sm h-100">
                     <a href="/projects/leaderbio/leaderbio.html">
                 <img class="card-img-top" src="/Media/thumbnails/leaderbio_t.jpg" alt="Card image cap">
