--- a/projects/fastwork/fastwork.html
+++ b/projects/fastwork/fastwork.html
@@ -241,7 +241,9 @@
                             </li>
                         </ul>
                     </p>
-                    <h1><br><br><br></h1>
+                    <h1 class="text-center"><br><br>
+                        See Also
+                        <br><br></h1>
                 </div>
         </div>
 
@@ -249,8 +251,8 @@
 
 
 
-        <div class="row justify-content-center">
-                <div class="col-4">
+        <div class="row ">
+                <div class="col-12 col-md-6 col-lg-4 mt-4">
                     <div class="card shadow-sm h-100">
                         <a href="/index.html">
                         <img class="card-img-top" src="/Media/thumbnails/quizzito.png" alt="Card image cap">
@@ -261,7 +263,7 @@
                     </a>
                       </div>
                 </div>
-                <div class="col-4">
+                <div class="col-12 col-md-6 col-lg-4 mt-4">
                     <div class="card shadow-sm h-100 ">
                             <a href="/projects/zedlashes/zedlashes.html">
                         <img class="card-img-top" src="/Media/thumbnails/zedlashes.jpg" alt="Card image cap">
@@ -272,7 +274,7 @@
                         </a>
                       </div>
                 </div>  
-                <div class="col-4">
+                <div class="col-12 col-md-6 col-lg-4 mt-4">
                     <div class="card shadow-sm h-100">
                             <a href="/projects/leaderbio/leaderbio.html">
                         <img class="card-img-top" src="/Media/thumbnails/leaderbio_t.jpg" alt="Card image cap">
