--- a/projects/leaderbio/leaderbio.html
+++ b/projects/leaderbio/leaderbio.html
@@ -276,8 +276,8 @@
         </div>
 
 
-    <div class="row justify-content-center">
-        <div class="col-4">
+    <div class="row ">
+        <div class="col-12 col-md-6 col-lg-4 mt-4">
             <div class="card shadow-sm h-100">
                 <a href="/projects/qods/HabiQods.html">
                 <img class="card-img-top" src="/Media/thumbnails/habiqods.jpg" alt="Card image cap">
@@ -288,7 +288,7 @@
             </a>
               </div>
         </div>
-        <div class="col-4">
+        <div class="col-12 col-md-6 col-lg-4 mt-4">
             <div class="card shadow-sm h-100 ">
                     <a href="/projects/fastwork/fastwork.html">
                 <img class="card-img-top" src="/Media/thumbnails/fastwork.jpg" alt="Card image cap">
@@ -299,7 +299,7 @@
                 </a>
               </div>
         </div>  
-        <div class="col-4">
+        <div class="col-12 col-md-6 col-lg-4 mt-4">
             <div class="card shadow-sm h-100">
                     <a href="/projects/zedlashes/zedlashes.html">
                 <img class="card-img-top" src="/Media/thumbnails/zedlashes.jpg" alt="Card image cap">
