--- a/projects/qods/HabiQods.html
+++ b/projects/qods/HabiQods.html
@@ -337,13 +337,18 @@ protection zone is an invisible rectangle devoid of content.
       <p>
         <br><br>
         You can learn more about me <a href="/about.html"><span class="highlited">HERE</span></a>
-        <br><br> <br><br> <br><br> <br><br>
+        <br><br> <br><br> 
+        <h1 class="text-center">
+          See also
+        </h1>
+        <br><br> <br><br>
       </p>
+
     </div>
 </div>
 
-<div class="row justify-content-center">
-  <div class="col-4">
+<div class="row ">
+  <div class="col-12 col-md-6 col-lg-4 mt-4">
       <div class="card shadow-sm h-100">
               <a href="/projects/leaderbio/leaderbio.html">
           <img class="card-img-top" src="/Media/thumbnails/leaderbio_t.jpg" alt="Card image cap">
@@ -355,7 +360,7 @@ protection zone is an invisible rectangle devoid of content.
         </div>
         
   </div>
-    <div class="col-4">
+    <div class="col-12 col-md-6 col-lg-4 mt-4">
         <div class="card shadow-sm h-100 ">
             <a href="/projects/zedlashes/zedlashes.html">
             <img class="card-img-top" src="/Media/thumbnails/zedlashes.jpg" alt="Card image cap">
@@ -366,7 +371,7 @@ protection zone is an invisible rectangle devoid of content.
         </a>
           </div>
     </div>
-    <div class="col-4">
+    <div class="col-12 col-md-6 col-lg-4 mt-4">
         <div class="card shadow-sm h-100 ">
                 <a href="/projects/fastwork/fastwork.html">
             <img class="card-img-top" src="/Media/thumbnails/fastwork.jpg" alt="Card image cap">
