work details fixed

--- a/work.html
+++ b/work.html
@@ -135,16 +135,25 @@
 <div class="row justify-content-center">
     <div class="col-8">
         <h2 class="text-center">
-          <br><br><br><br><br><br>
-            While I'm crafting some beautiful presentations,
+          <br><br><br>
+            While I'm crafting more beautiful presentations,
             You can check my
             <a class="link" href="www.dribbble.com/abderezak">Dribbble</a> 
             or
             <a class="link" href="www.be.net/abderezak">Behance</a>
         </h2>
-       
+        <br><br><br>
       </div>
 </div>
+<div class="row justify-content-center">
+    <div class="col-12">
+
+        <h1><br><br><br></h1>
+        <p class="text-center">
+                Copyright © 2019 Abderezak KAFI
+        </p>
+    </div>
+    </div>
 
 
 
