--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </nav>
 <!-------------nav bar---------------->
         <div class="container">         
-           <div class="row main ">
+           <div class="row main justify-content-center">
                 <div class="col-sm-0 col-lg-1"></div>
                 <div class="col-sm-12 col-lg-4 order-lg-3">
                     <a href="/Media/profil_pic.png" class="progressive replace">
@@ -68,14 +68,14 @@
                 
                 <div class="col-sm-12 col-lg-6 order-lg-2 ">
                     <div class="d-flex flex-column">
-                        <h1 class="mb-auto display-1 text-sm-center text-lg-left">
+                        <h1 class=" display-1 text-sm-center text-lg-left">
                             Abderezak — UX/UI designer<br>
                             with a Master degree <br>
                             in computer science.<br>
                             I love solving<br>
                             problems !
                         </h1>
-                        <p>
+                        <p class="mt-auto mb-0  text-sm-center text-lg-left">
                                 continue scrolling to see<br>
                                 my work process else you can visit my
                                 <a href="work.html" >WORK</a>
