--- a/projects/qods/HabiQods.html
+++ b/projects/qods/HabiQods.html
@@ -38,7 +38,7 @@
     <body class="habiqods">
         
  <!----------Nav Bar----------->
- <nav class="navbar  fixed-top navbar-expand-lg navbar-dark my-nav">
+ <nav class="navbar  fixed-top navbar-expand-lg navbar-light my-nav ">
     <a class="navbar-brand" href="#">Abderezak <span>KAFI</span></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -49,10 +49,10 @@
           <a class="nav-link" href="/index.html">Process</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="/work.html">Work</a>
+          <a class="nav-link" href="/work.html">Work<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item ">
-          <a class="nav-link" href="/about.html">About<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/about.html">About</a>
         </li>   
       </ul>
     </div>
