--- a/work.html
+++ b/work.html
@@ -48,10 +48,10 @@
           <a class="nav-link" href="/index.html">Process</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="/work.html">Work</a>
+          <a class="nav-link" href="/work.html">Work<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item ">
-          <a class="nav-link" href="/about.html">About<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/about.html">About</a>
         </li>   
       </ul>
     </div>
