--- a/work.html
+++ b/work.html
@@ -124,7 +124,18 @@
                           </div>
                           </a>
                         </div>
-                        <h1><br></h1>
+                  </div>  
+                  <div class="col-12 col-md-6 col-lg-4 mt-4 ">
+                   
+                      <div class="card shadow-sm h-100 ">
+                              <a href="/projects/zedlashes/zedlashes.html">
+                          <img class="card-img-top" src="/Media/thumbnails/ecom_t.jpg" alt="Card image cap">
+                          <div class="card-body">
+                            <h5 class="card-title">Ecommerce -
+                                  website design</h5>
+                          </div>
+                          </a>
+                        </div>
                   </div>  
 
         
