barsha recommendation added

--- a/about.html
+++ b/about.html
@@ -282,10 +282,10 @@
                 </div>
                 <div class="carousel-item">
                     <p class="quote">
-                        "Abderezak  understood our business  and analyzed deeply the customers behavior . Thus, he designed a suitable UX"
+                        Abderezak is passionate, professional and perfectionist. Our clients were very satisfied with his work.   
                     </p>
                     <p class=" small-text text-center">
-                        Chouaib Yusuf - Quizzito Family CEO
+                        Zeineb Hadj Ali - Barsha Technology CEO
                     </p>
                 </div>
                 
