--- a/projects/zedlashes/zedlashes.html
+++ b/projects/zedlashes/zedlashes.html
@@ -38,7 +38,7 @@
         
        <!----------Nav Bar----------->
        <nav class="navbar  fixed-top navbar-expand-lg navbar-light my-nav ">
-          <a class="navbar-brand" href="#">Abderezak <span>KAFI</span></a>
+          <a class="navbar-brand" href="/">Abderezak <span>KAFI</span></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>  
