minor changes js time

--- a/about.html
+++ b/about.html
@@ -151,7 +151,7 @@
                  
            <h1 id="1"><br>Background</h1>
            <p>
-              at the age of 14, I was so passionate about coding. I was able to transform my ideas into programs and share them with the community. So, after high school, I went to the 
+              At the age of 14, I was so passionate about coding. I was able to transform my ideas into programs and share them with the community. So, after high school, I went to the 
               <a class="thin-link" href="www.esi.dz">Higher National School of Computer Science</a>.
                I was a geek (I remember that I was using my phone to code instead of chatting). In my second year, I attended a Bootcamp about UX because I had already an experience in AI and PS. There, I discovered this new world. Thus, I started taking online courses and attending different Bootcamps while following with my UX mentor to develop my skills.
            </p>
