--- a/about.html
+++ b/about.html
@@ -82,15 +82,15 @@
           </h1>
           <p>
               Sharing thoughts on 
-              <a class="link" href="https://www.fb.com/k.abderezak">Facebook</a>,
+              <a class="link" href="https://www.fb.com/k.abderezak" target="blank">Facebook</a>,
                life stories & travels on 
-              <a class="link" href="https://www.instagram.com/k.abderezak">Instagram</a>,
+              <a class="link" href="https://www.instagram.com/k.abderezak" target="blank">Instagram</a>,
                Design shots on 
-              <a class="link" href="https://www.dribbble.com/abderezak">Dribbble</a>,
+              <a class="link" href="https://www.dribbble.com/abderezak" target="blank">Dribbble</a>,
                Case studies on 
-              <a class="link" href="https://www.be.net/abderezak">Behance</a>,
+              <a class="link" href="https://www.be.net/abderezak" target="blank">Behance</a>,
                and tech stuff on 
-              <a class="link" href="https://www.linkedin.com/in/abderezak/">LinkedIn</a>.
+              <a class="link" href="https://www.linkedin.com/in/abderezak/" target="blank">LinkedIn</a>.
               <br><br><br>
           </p>
           
