--- a/work.html
+++ b/work.html
@@ -149,9 +149,9 @@
           <br><br><br>
             While I'm crafting more beautiful presentations,
             You can check my
-            <a class="link" href="https://www.dribbble.com/abderezak">Dribbble</a> 
+            <a class="link" href="https://www.dribbble.com/abderezak" target="blank">Dribbble</a> 
             or
-            <a class="link" href="https://www.be.net/abderezak">Behance</a>
+            <a class="link" href="https://www.be.net/abderezak" target="blank">Behance</a>
         </h2>
         <br><br><br>
       </div>
