ecom link update

--- a/work.html
+++ b/work.html
@@ -128,7 +128,7 @@
                   <div class="col-12 col-md-6 col-lg-4 mt-4 ">
                    
                       <div class="card shadow-sm h-100 ">
-                              <a href="/projects/zedlashes/zedlashes.html">
+                              <a href="/projects/ecom/ecom.html">
                           <img class="card-img-top" src="/Media/thumbnails/ecom_t.jpg" alt="Card image cap">
                           <div class="card-body">
                             <h5 class="card-title">Ecommerce -
