--- a/about.html
+++ b/about.html
@@ -160,7 +160,7 @@
            
           <ol class="facts-about-me">
             <li class="content-text">
-                I'm in love with entrepreneurship, I was part programs like Alinov by MEDAFCO and Impact@Work by ACSE.
+                I'm in love with entrepreneurship, I was part of programs like Alinov by MEDAFCO and Impact@Work by ACSE.
             </li>
             <li class="content-text">
                 I'm the sporty guy between my peers, I started since I was fifteen. Now, I exercise at least three times a week.
