--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <div class="d-flex flex-column">
                         <h1 class=" display-1 text-sm-center text-lg-left">
                             Abderezak — UX/UI designer<br>
-                            with a Master degree <br>
+                            and a Master student <br>
                             in computer science.<br>
                             I love solving<br>
                             problems !
