headline changed to product designer

--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
                 <div class="col-sm-12 col-lg-6 order-lg-2 ">
                     <div class="d-flex flex-column">
                         <h1 class=" display-1 text-sm-center text-lg-left">
-                            Abderezak — UX/UI designer<br>
-                            and a Master student <br>
-                            in computer science.<br>
+                            Abderezak KAFI — Product designer and a Master<br>
+                            student in computer<br>
+                            science.<br>
                             I love solving<br>
                             problems !
                         </h1>
