--- a/index.html
+++ b/index.html
@@ -446,11 +446,11 @@
     </div>
     <div class="col-12 col-md-6 col-lg-3 mt-4">
         <div class="card shadow-sm h-100">
-                <a href="/projects/ecom/ecom.html">
-                  <img class="card-img-top" src="/Media/thumbnails/ecom_t.jpg" alt="Card image cap">
+                <a href="/projects/crom/crom.html">
+                  <img class="card-img-top" src="/Media/thumbnails/crom.png" alt="Card image cap">
 
                   <div class="card-body">
-              <h5 class="card-title">Ecommerce website design </h5>
+              <h5 class="card-title">Crom Store website design </h5>
             </div>
             </a>
           </div>
