--- a/projects/qods/HabiQods.html
+++ b/projects/qods/HabiQods.html
@@ -362,11 +362,10 @@ protection zone is an invisible rectangle devoid of content.
   </div>
     <div class="col-12 col-md-6 col-lg-4 mt-4">
         <div class="card shadow-sm h-100 ">
-            <a href="/projects/zedlashes/zedlashes.html">
-            <img class="card-img-top" src="/Media/thumbnails/zedlashes.jpg" alt="Card image cap">
+            <a href="/projects/crom/crom.html">
+            <img class="card-img-top" src="/Media/thumbnails/crom.png" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">Zedlashes -
-                  website design</h5>
+              <h5 class="card-title">Crom Store website design</h5>
             </div>
         </a>
           </div>
