--- a/work.html
+++ b/work.html
@@ -126,6 +126,17 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 mt-4 ">
                    
+                    <div class="card shadow-sm h-100 ">
+                            <a href="/projects/ws/ws.html">
+                        <img class="card-img-top" src="/Media/thumbnails/ws.jpg" alt="Card image cap">
+                        <div class="card-body">
+                          <h5 class="card-title">Wissal Systems - Visual identity & packaging design</h5>
+                        </div>
+                        </a>
+                      </div>
+                </div>  
+                <div class="col-12 col-md-6 col-lg-4 mt-4 ">
+                   
                       <div class="card shadow-sm h-100 ">
                               <a href="/projects/zedlashes/zedlashes.html">
                           <img class="card-img-top" src="/Media/thumbnails/zedlashes.jpg" alt="Card image cap">
