2020 commit phone added, affinity diagram corrected

--- a/about.html
+++ b/about.html
@@ -91,7 +91,9 @@
               <a class="link" href="https://www.be.net/abderezak" target="blank">Behance</a>,
                and tech stuff on 
               <a class="link" href="https://www.linkedin.com/in/abderezak/" target="blank">LinkedIn</a>.
-              <br><br><br>
+              Need something urgently? 
+              <a class="link" href="" target="blank">+213 780 176 313</a>.
+              <br><br><br> 
           </p>
           
         </div>
