--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                 <p>
                         I started grouping the collected information to summarize/share what I learned in the interviews and validate the hypothesis 
                 </p>
-                <a href="/Media/affinity diagram.svg" class="progressive replace">
+                <a href="/Media/affinity diagram.png" class="progressive replace">
                     <img src="/Media/sm/affinity diagram.jpg" class="preview" alt="Affinity diagram"/>
                 </a>
                 <h2 id="3.2"><br>Empathy maps</h2>
@@ -294,7 +294,7 @@
                 </p>
                 <h2 id="4.2"><br>User task flows</h2>
                 <p>
-                        Once the functional specs got approved, I started making the user flows. I choose to keep them simple so we can go faster and do as much iterations as we need. Here an example for the parent onboarding (click for full view):
+                        Once the functional specs got approved, I started making the user flows. I choose to keep them simple so we can go faster and do as much iterations as we need. Here an example for the parent onboarding:
                 </p>
                 </div>
                 <div class="col-sm-1 col-lg-2"></div>
