--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
                 <div class="col-sm-12 col-lg-6 order-lg-2 ">
                     <div class="d-flex flex-column">
                         <h1 class=" display-1 text-sm-center text-lg-left">
-                            Abderezak KAFI — Product designer and a Master<br>
-                            student in computer<br>
-                            science.<br>
+                            Abderezak KAFI — 3+ yearsdelivering UX/UI design<br>
+                            projects as a<br>
+                            consultant.<br>
                             I love solving<br>
                             problems !
                         </h1>
@@ -240,7 +240,7 @@
                         <span class="content-semi-bold"> 2- kids side</span> <br>
                         Interview:<br>
                         •&emsp;Do you like the suggested gifts?<br>
-                        •&emsp;When you like to play?<br>
+                        •&emsp;When do they like to play?<br>
                 </p>
                 <h1 id="3"><br>Analysis</h1>
                 <h2 id="3.1"><br>Affinity diagram <span style="color:#868686">(simplified)</span></h2>
@@ -266,7 +266,7 @@
                         •&emsp;Payment process  <br>
                         
                         Elaborating journey maps enabled me to see precisely what I need to change in the onboarding, the payment process, and other areas. It also helped us as a team to have a unified vision.
-                        Note: Before the changes, some parents were not adding any gift for their kids. This was the major issue for their user drop. Now, the parent adds at least 3 gifts just after adding their first kid. For the purchase, the conversion rate raised from 1% to 4% just by ameliorating the payment process.              
+                        Note: Before the changes, some parents were not adding any gift for their kids. This was the major issue for their user drop. Now, the parent adds at least 3 gifts just after adding their first kid.              
                 </p>
                 <h1 id="4" ><br>Ideation</h1>
                 <h2 id="4.1" ><br>Main functionalities <span style="color:#868686">(simplified)</span></h2>
