--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <div class="col-sm-12 col-lg-6 order-lg-2 ">
                     <div class="d-flex flex-column">
                         <h1 class=" display-1 text-sm-center text-lg-left">
-                            Abderezak KAFI — 3+ yearsdelivering UX/UI design<br>
+                            Abderezak KAFI — 3+ years<br>delivering UX/UI design<br>
                             projects as a<br>
                             consultant.<br>
                             I love solving<br>
