--- a/about.html
+++ b/about.html
@@ -70,8 +70,8 @@
         <div class="col-10 col-lg-8">
           <h1 class="display-2 text-center text-lg-left">
             <br><br><br> <br> <br>
-              I'm Abderezak, a twenty-two-year-old 
-              designer from Algeria. A problems solver, 
+              I'm Abderezak, a twenty-five-year-old 
+              designer based in Paris. A problems solver, 
               not only for users and business but
               friends and family also.
               <br>
