--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
             <br><br><br> <br> <br>
               I'm Abderezak, a twenty-five-year-old 
               designer based in Paris. A problems solver, 
-              not only for users and business but
+              not only for users and businesses but
               friends and family also.
               <br>
               <br>
