--- a/about.html
+++ b/about.html
@@ -92,7 +92,7 @@
                and tech stuff on 
               <a class="link" href="https://www.linkedin.com/in/abderezak/" target="blank">LinkedIn</a>.
               Need something urgently? 
-              <a class="link" href="tel:0033764084205" target="blank">+33 7 64 08 42 05</a>.
+              <a class="link" href="tel:+33764084205" target="blank">+33 7 64 08 42 05</a>.
               <br><br><br> 
           </p>
           
