--- a/about.html
+++ b/about.html
@@ -306,7 +306,7 @@
 
           <div class="row justify-content-center">
             <div class="col-8 col-md-4">
-                <a class="text-center" href="/assets/CV_Abderezak_KAFI.pdf">
+                <a class="text-center" href="mailto:abderezak.kafi@gmail.com?subject=CV request&body=Hello Abderezak, We are interested in your profil, can you please send us your CV? Best regards,">
                     <button id="download-cv" type="button" class="btn btn-outline-secondary btn-block">DOWNLOAD CV</button>
                   </a>
                   <h1><br></h1>
