--- a/index.html
+++ b/index.html
@@ -69,11 +69,15 @@
                 <div class="col-sm-12 col-lg-6 order-lg-2 ">
                     <div class="d-flex flex-column">
                         <h1 class=" display-1 text-sm-center text-lg-left">
-                            Abderezak KAFI — 3+ years<br> delivering UX/UI design<br>
+                            Abderezak KAFI — 2+ years<br> delivering UX/UI design<br>
                             projects as a consultant.<br>
                             I love solving<br>
                             problems !
                         </h1>
+                      <p class="mt-auto mb-0 text-sm-center text-lg-left" style="background-color: red; color: white;">
+                      This portfolio is 5 years old<br>
+                      New portfolio available on request
+                        </p>
                         <p class="mt-auto mb-0  text-sm-center text-lg-left">
                                 continue scrolling to see<br>
                                 my work process else you can visit my
