--- a/index.html
+++ b/index.html
@@ -74,14 +74,15 @@
                             I love solving<br>
                             problems !
                         </h1>
-                      <p class="mt-auto mb-0 text-sm-center text-lg-left" style="background-color: red; color: white;">
-                      This portfolio is 5 years old<br>
-                      New portfolio available on request
-                        </p>
+                    
                         <p class="mt-auto mb-0  text-sm-center text-lg-left">
                                 continue scrolling to see<br>
                                 my work process else you can visit my
                                 <a href="work.html" >WORK</a>
+                        </p>
+                         <p class="mt-auto mb-0 text-sm-center text-lg-left">
+                            <span style="color:red; font-weight:bold;">This portfolio is 5 years old</span><br>
+                         <span style="color:red; font-weight:bold;">New portfolio available on request</span>
                         </p>
                     </div>
                 </div>
