--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
         <div class="col-10 col-lg-8">
           <h1 class="display-2 text-center text-lg-left">
             <br><br><br> <br> <br>
-              I'm Abderezak, a twenty-five-year-old 
+              I'm Abderezak, a twenty-three-year-old 
               designer based in Paris. A problems solver, 
               not only for users and businesses but
               friends and family also.
@@ -81,11 +81,7 @@
 
           </h1>
           <p>
-              Sharing thoughts on 
-              <a class="link" href="https://www.fb.com/k.abderezak" target="blank">Facebook</a>,
-               life stories & travels on 
-              <a class="link" href="https://www.instagram.com/k.abderezak" target="blank">Instagram</a>,
-               Design shots on 
+              Sharing design shots on 
               <a class="link" href="https://www.dribbble.com/abderezak" target="blank">Dribbble</a>,
                Case studies on 
               <a class="link" href="https://www.be.net/abderezak" target="blank">Behance</a>,
